refactor(style): fix mobile display bugs

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -8,7 +8,7 @@
  */
 
 
-button.Button.Button--primary.pc-specs {
+button.Button.Button--primary.ip-locate {
   margin-top: 8px;
   padding: 7px;
   margin-left: 0px;
@@ -24,32 +24,8 @@ button.Button.Button--primary.pc-specs {
   border: 1px solid #cad0db;
   border-radius: 6px;
 }
-.Post-footer {
-  margin-bottom: 90px;
-}
-
 body when (@config-dark-mode = true) {
-  .pc-specs {
+  .ip-locate {
     border: 1px solid #1b2028;
-  }
-}
-@media (max-width: 991px){
-  .Post-footer {
-    margin-bottom: 150px;
-  }
-}
-@media (max-width: 767px){
-  .Post-footer {
-    margin-bottom: 90px;
-  }
-}
-@media (max-width: 634px){
-  .Post-footer {
-    margin-bottom: 110px;
-  }
-}
-@media (max-width: 471px){
-  .Post-footer {
-    margin-bottom: 150px;
   }
 }
