--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -11,7 +11,7 @@
 button.Button.Button--primary.ip-locate {
   margin-top: 8px;
   padding: 7px;
-  margin-left: 0px;
+  margin-left: 0;
 }
 .userIp-container {
   flex-wrap: wrap;
